--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/app/immutable/entry/start.DBk0P_ve.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CSYqKA_b.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.Cx6LPsDE.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/MqOdHtEV.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.DI7NtBoS.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.B89lb6SR.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_k3btrp = {
+					__sveltekit_1k6b310 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.DBk0P_ve.js"),
-						import("/app/immutable/entry/app.DI7NtBoS.js")
+						import("/app/immutable/entry/start.Cx6LPsDE.js"),
+						import("/app/immutable/entry/app.B89lb6SR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
