--- a/jardim-da-penha/custo-vida-jardim-da-penha-ansiedade/index.html
+++ b/jardim-da-penha/custo-vida-jardim-da-penha-ansiedade/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bn7exl1o.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.DBk0P_ve.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CSYqKA_b.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.Cx6LPsDE.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/MqOdHtEV.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.DI7NtBoS.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.B89lb6SR.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -137,15 +137,15 @@
 			
 			<script>
 				{
-					__sveltekit_k3btrp = {
+					__sveltekit_1k6b310 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.DBk0P_ve.js"),
-						import("/app/immutable/entry/app.DI7NtBoS.js")
+						import("/app/immutable/entry/start.Cx6LPsDE.js"),
+						import("/app/immutable/entry/app.B89lb6SR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
