--- a/servicos/grupos-e-rodas/index.html
+++ b/servicos/grupos-e-rodas/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/20.B-3_37AQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.BQnB1IoZ.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/Cmn22rAV.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.Bv1pytOx.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/DiKK-6Q7.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.DMfdLcW6.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.Ydibyk3w.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -66,15 +66,15 @@
 			
 			<script>
 				{
-					__sveltekit_mpjyta = {
+					__sveltekit_izzkbc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.BQnB1IoZ.js"),
-						import("/app/immutable/entry/app.DMfdLcW6.js")
+						import("/app/immutable/entry/start.Bv1pytOx.js"),
+						import("/app/immutable/entry/app.Ydibyk3w.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 20],
