--- a/servicos/terapia-online/index.html
+++ b/servicos/terapia-online/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/25.cju3R6iM.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.Bv1pytOx.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/DiKK-6Q7.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.D7Ep1jha.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/guqeeyDe.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.Ydibyk3w.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.8jPQMrSl.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -64,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_izzkbc = {
+					__sveltekit_1703f0f = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.Bv1pytOx.js"),
-						import("/app/immutable/entry/app.Ydibyk3w.js")
+						import("/app/immutable/entry/start.D7Ep1jha.js"),
+						import("/app/immutable/entry/app.8jPQMrSl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 25],
