--- a/homens/vicio-trabalho-workaholic-burnout/index.html
+++ b/homens/vicio-trabalho-workaholic-burnout/index.html
@@ -12,13 +12,13 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link href="/app/immutable/assets/29.Bn7exl1o.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.Bv1pytOx.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/DiKK-6Q7.js">
+		<link href="/app/immutable/assets/29.Bf2sEoKl.css" rel="stylesheet">
+		<link rel="modulepreload" href="/app/immutable/entry/start.D7Ep1jha.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/guqeeyDe.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.Ydibyk3w.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.8jPQMrSl.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -33,9 +33,9 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/CKsJ9VOg.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DIE-kIJt.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CLaBO2oi.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.CVgbEnsG.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.D-k9a1rj.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CBbuBPfZ.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/F9n-vBwq.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/BEhN-_rW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/_jSWC8me.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKJHZfkY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DedJW04g.js">
@@ -156,15 +156,15 @@
 			
 			<script>
 				{
-					__sveltekit_izzkbc = {
+					__sveltekit_1703f0f = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.Bv1pytOx.js"),
-						import("/app/immutable/entry/app.Ydibyk3w.js")
+						import("/app/immutable/entry/start.D7Ep1jha.js"),
+						import("/app/immutable/entry/app.8jPQMrSl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
