--- a/jardim-da-penha/terapia-para-estudantes-ufes-vitoria/index.html
+++ b/jardim-da-penha/terapia-para-estudantes-ufes-vitoria/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bf2sEoKl.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.D7Ep1jha.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/guqeeyDe.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.m9gTFS2H.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/fxUjoCT8.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DnNcXZc0.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CKvKQ3ts.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.8jPQMrSl.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.DlrKQpEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/-Rh4EYo9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/7o8WEx2i.js">
@@ -187,15 +187,15 @@
 			
 			<script>
 				{
-					__sveltekit_1703f0f = {
+					__sveltekit_1hlud8y = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.D7Ep1jha.js"),
-						import("/app/immutable/entry/app.8jPQMrSl.js")
+						import("/app/immutable/entry/start.m9gTFS2H.js"),
+						import("/app/immutable/entry/app.DlrKQpEI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
