--- a/sobre/index.html
+++ b/sobre/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/26.CodgroFZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.DYz0JcRI.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/XaTs8ls7.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.CbsgSy-K.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/DfwvtbDW.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.B67ZsyvI.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.x65xS2CA.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -93,15 +93,15 @@
 			
 			<script>
 				{
-					__sveltekit_aevrbm = {
+					__sveltekit_1eoo871 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.DYz0JcRI.js"),
-						import("/app/immutable/entry/app.B67ZsyvI.js")
+						import("/app/immutable/entry/start.CbsgSy-K.js"),
+						import("/app/immutable/entry/app.x65xS2CA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 26],
