--- a/404.html
+++ b/404.html
@@ -11,12 +11,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-400-latin.woff2" crossorigin />
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
-		<link rel="modulepreload" href="/app/immutable/entry/start.CbsgSy-K.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/DfwvtbDW.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.BXXtyxlU.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKOeHIkZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.x65xS2CA.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.R75SvLOc.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -29,15 +29,15 @@
 	<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1eoo871 = {
+					__sveltekit_1s21387 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.CbsgSy-K.js"),
-						import("/app/immutable/entry/app.x65xS2CA.js")
+						import("/app/immutable/entry/start.BXXtyxlU.js"),
+						import("/app/immutable/entry/app.R75SvLOc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
