--- a/saude-mental/corpo-e-emocoes/index.html
+++ b/saude-mental/corpo-e-emocoes/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bf2sEoKl.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.CbsgSy-K.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/DfwvtbDW.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.BXXtyxlU.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CKOeHIkZ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.x65xS2CA.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.R75SvLOc.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -33,9 +33,9 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/B4iF9U5j.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Be-PEey8.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DuK5T7lt.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.B2vB-QyF.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.Bj9RBBCr.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/pfMRWl6z.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BbJDRhMZ.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/Bba_c11z.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CO4oFB5B.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BztQ8LG4.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/fmAK2lWu.js">
@@ -147,15 +147,15 @@
 			
 			<script>
 				{
-					__sveltekit_1eoo871 = {
+					__sveltekit_1s21387 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.CbsgSy-K.js"),
-						import("/app/immutable/entry/app.x65xS2CA.js")
+						import("/app/immutable/entry/start.BXXtyxlU.js"),
+						import("/app/immutable/entry/app.R75SvLOc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
