--- a/servicos/psicoterapia-individual/index.html
+++ b/servicos/psicoterapia-individual/index.html
@@ -12,12 +12,12 @@
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter-600-latin.woff2" crossorigin />
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.BXXtyxlU.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CKOeHIkZ.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.BE9bJBX8.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/DlQ6RtCL.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.R75SvLOc.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.D_7IO5A-.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -78,15 +78,15 @@
 			
 			<script>
 				{
-					__sveltekit_1s21387 = {
+					__sveltekit_t7iw7s = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.BXXtyxlU.js"),
-						import("/app/immutable/entry/app.R75SvLOc.js")
+						import("/app/immutable/entry/start.BE9bJBX8.js"),
+						import("/app/immutable/entry/app.D_7IO5A-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 22],
