--- a/saude-mental/vida-acelerou-demais/index.html
+++ b/saude-mental/vida-acelerou-demais/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/29.Bf2sEoKl.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.C3PYoUbg.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CVkTHj98.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.CFVRQoVI.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D7gObQtY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.D-HuuKvI.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.By0ysnNJ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -33,7 +33,7 @@
 		<link rel="modulepreload" href="/app/immutable/chunks/B4iF9U5j.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Be-PEey8.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DuK5T7lt.js">
-		<link rel="modulepreload" href="/app/immutable/nodes/29.CiPFTZ6k.js">
+		<link rel="modulepreload" href="/app/immutable/nodes/29.D2csK1CA.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/pfMRWl6z.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DoSM3ewi.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/CO4oFB5B.js">
@@ -143,15 +143,15 @@
 			
 			<script>
 				{
-					__sveltekit_zh1rpb = {
+					__sveltekit_13o3euu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.C3PYoUbg.js"),
-						import("/app/immutable/entry/app.D-HuuKvI.js")
+						import("/app/immutable/entry/start.CFVRQoVI.js"),
+						import("/app/immutable/entry/app.By0ysnNJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 29],
