--- a/servicos/grupos-e-rodas/index.html
+++ b/servicos/grupos-e-rodas/index.html
@@ -13,12 +13,12 @@
 	
 		<link href="/app/immutable/assets/0.AuC8MkeQ.css" rel="stylesheet">
 		<link href="/app/immutable/assets/20.B-3_37AQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="/app/immutable/entry/start.C3PYoUbg.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CVkTHj98.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.CFVRQoVI.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/D7gObQtY.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXIbIa6I.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/vsaaILC1.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.D-HuuKvI.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.By0ysnNJ.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BXl3LOEh.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/Cne5wWF9.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DNGTB5Aj.js">
@@ -66,15 +66,15 @@
 			
 			<script>
 				{
-					__sveltekit_zh1rpb = {
+					__sveltekit_13o3euu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.C3PYoUbg.js"),
-						import("/app/immutable/entry/app.D-HuuKvI.js")
+						import("/app/immutable/entry/start.CFVRQoVI.js"),
+						import("/app/immutable/entry/app.By0ysnNJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 20],
